@@ -122,8 +122,8 @@ hdate_get_utc_sun_time_deg (int day, int month, int year, double latitude, doubl
 	ha = 720.0 * ha / M_PI;
 	
 	/* get sunset/rise times in utc wall clock in minutes from 00:00 time */
-	*sunrise = (int)(720.0 + 4.0 * longitude - ha - eqtime);
-	*sunset = (int)(720.0 + 4.0 * longitude + ha - eqtime);
+	*sunrise = (int)(720.0 - 4.0 * longitude - ha - eqtime);
+	*sunset = (int)(720.0 - 4.0 * longitude + ha - eqtime);
 	
 	return;
 }
